--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-Theme: Cayman
-Title: Summer Dupree's Portfolio
-Logo: /img/IMG_6674.JPEG
+title: Summer Dupree's Webpage
+description: ESIIL Stars 2025 Portfolio
+theme: jekyll-theme-cayman
